<resources>
    <string name="app_name">The Turing Game</string>
    <string name="enter_message">Enter a Message...</string>
    <string name="title_activity_home_screen">home_screen</string>
    <string name="the_turing_game">The Turing Game</string>
    <string name="turing_game_chat">Turing Game Chat</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="mic_access">Microphone Access</string>
    <string name="send">Send</string>

    <!-- Strings related to Home screen -->
    <string name="start_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="contact">Contact</string>


    <!--Strings related to chat room -->
    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="guess_stops_timer">Guess</string>
    <string name="human">Human</string>
    <string name="bot">Bot</string>

    <!-- Strings related to contact screen-->
    <string name="give_us_your_email">What email would you like us to respond to you on?</string>
    <string name="query_received">Your message was receieved! We will get back to you as soon as possible.</string>
    <string name="thankyou">Thank You</string>
    <string name="email">Enter email ...</string>
    <string name="message">Enter message ...</string>

    <!--Strings related to the guess screen-->
    <string name="you_just_chatted_with_a">You just chatted with a...</string>
    <string name="time_elapsed">Time Elapsed:</string>
    <string name="points">Points:</string>
    <string name="popup_test">This is a popup window</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_result">result</string>


</resources>
